[package]
name = "ipynb-to-md"
version = "0.2.0"
edition = "2021"
authors = ["Diaa Kasem <me@diaa.me>"]
description = "Convert Jupyter Notebooks to Markdown files"
license = "MIT"
homepage = "https://github.com/diaakasem/ipynb-to-md"
repository = "https://github.com/diaakasem/ipynb-to-md"
readme = "README.md"
keywords = ["jupyter", "notebook", "markdown", "ipynb", "convert"]
categories = ["development-tools", "text-processing"]
documentation = "https://docs.rs/ipynb-to-md"
default-run = "ipynb-to-md"

[dependencies]
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
